Target .Net Standard

--- a/MetaLinq/MetaLinq.csproj
+++ b/MetaLinq/MetaLinq.csproj
@@ -1,77 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{589CB6B2-B16E-4AE8-9F68-8255A3415838}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MetaLinq</RootNamespace>
-    <AssemblyName>MetaLinq</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>MetaLinqStandard</PackageId>
+    <Version>1.0.11</Version>
+    <Title>MetaLinqStandard</Title>
+
+    <Authors>Harry McIntyre / Aaron Erickson / QUSMA</Authors>
+
+    <licenseUrl>https://github.com/mcintyre321/MetaLinq/blob/master/License.txt</licenseUrl>
+    <projectUrl>https://github.com/mcintyre321/MetaLinq</projectUrl>
+    <tags>LINQ, Expressions, Serialization, Deserialization</tags>
+
+    <description>Library for serializing, modifying and deserializing LINQ Expressions, now targeting .Net Standard</description>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Collections\EditableElementInitCollection.cs" />
-    <Compile Include="Collections\EditableExpressionCollection.cs" />
-    <Compile Include="Collections\EditableMemberBindingCollection.cs" />
-    <Compile Include="Collections\EditableMemberInfoCollection.cs" />
-    <Compile Include="Expressions\EditableBinaryExpression.cs" />
-    <Compile Include="Expressions\EditableConditionalExpression.cs" />
-    <Compile Include="Expressions\EditableConstantExpression.cs" />
-    <Compile Include="EditableExpression.cs" />
-    <Compile Include="Expressions\EditableInvocationExpression.cs" />
-    <Compile Include="Expressions\EditableLambdaExpression.cs" />
-    <Compile Include="Expressions\EditableListInitExpression.cs" />
-    <Compile Include="Expressions\EditableMemberExpression.cs" />
-    <Compile Include="Expressions\EditableMemberInitExpression.cs" />
-    <Compile Include="Expressions\EditableMethodCallExpression.cs" />
-    <Compile Include="Expressions\EditableNewArrayExpression.cs" />
-    <Compile Include="Expressions\EditableNewExpression.cs" />
-    <Compile Include="Expressions\EditableParameterExpression.cs" />
-    <Compile Include="Expressions\EditableTypeBinaryExpression.cs" />
-    <Compile Include="Expressions\EditableUnaryExpression.cs" />
-    <Compile Include="Extensions\EditableExpressionExtensions.cs" />
-    <Compile Include="Extensions\ExpressionExtensions.cs" />
-    <Compile Include="Extensions\ReflectionExtensions.cs" />
-    <Compile Include="Initializers\EditableElementInit.cs" />
-    <Compile Include="Initializers\EditableMemberAssignment.cs" />
-    <Compile Include="Initializers\EditableMemberBinding.cs" />
-    <Compile Include="Initializers\EditableMemberListBinding.cs" />
-    <Compile Include="Initializers\EditableMemberMemberBinding.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
